tests/dataset/tpc-ds/compiler/cpp/q65.error
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:60:12: error: ‘ss’ was not declared in this scope
   60 |   decltype(ss) ss;
      |            ^~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:60:12: error: ‘ss’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:64:68: error: ‘struct ItemRevenue’ has no member named ‘item’
   64 |                               decltype(std::declval<ItemRevenue>().item)>{
      |                                                                    ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:64:68: error: ‘struct ItemRevenue’ has no member named ‘item’
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:64:73: error: template argument 2 is invalid
   64 |                               decltype(std::declval<ItemRevenue>().item)>{
      |                                                                         ^
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:64:73: error: template argument 5 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:65:57: error: ‘struct ItemRevenue’ has no member named ‘item’
   65 |       {std::string("item"), std::declval<ItemRevenue>().item}}) key;
      |                                                         ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:65:57: error: ‘struct ItemRevenue’ has no member named ‘item’
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:69:42: error: request for member ‘item’ in ‘std::declval<__struct3>().__struct3::key’, which is of non-class type ‘int’
   69 |   decltype(std::declval<__struct3>().key.item) item;
      |                                          ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:69:42: error: request for member ‘item’ in ‘std::declval<__struct3>().__struct3::key’, which is of non-class type ‘int’
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:120:15: warning: use of ‘auto’ in parameter declaration only available with ‘-std=c++20’ or ‘-fconcepts’
  120 | float average(auto xs) {
      |               ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:21: error: no match for ‘operator==’ (operand types are ‘int’ and ‘std::unordered_map<std::__cxx11::basic_string<char>, int>’)
  139 |         if (__g.key == __key) {
      |             ~~~~~~~ ^~ ~~~~~
      |                 |      |
      |                 int    std::unordered_map<std::__cxx11::basic_string<char>, int>
In file included from /usr/include/x86_64-linux-gnu/c++/13/bits/c++allocator.h:33,
                 from /usr/include/c++/13/bits/allocator.h:46,
                 from /usr/include/c++/13/string:43,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:2:
/usr/include/c++/13/bits/new_allocator.h:215:9: note: candidate: ‘template<class _Up> bool std::operator==(const __new_allocator<pair<const __cxx11::basic_string<char>, int> >&, const __new_allocator<_Tp>&)’
  215 |         operator==(const __new_allocator&, const __new_allocator<_Up>&)
      |         ^~~~~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   ‘std::unordered_map<std::__cxx11::basic_string<char>, int>’ is not derived from ‘const std::__new_allocator<_Tp>’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note: candidate: ‘template<class _Up> bool std::operator==(const __new_allocator<char>&, const __new_allocator<_Tp>&)’
  215 |         operator==(const __new_allocator&, const __new_allocator<_Up>&)
      |         ^~~~~~~~
/usr/include/c++/13/bits/new_allocator.h:215:9: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   ‘std::unordered_map<std::__cxx11::basic_string<char>, int>’ is not derived from ‘const std::__new_allocator<_Tp>’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/iosfwd:42,
                 from /usr/include/c++/13/ios:40:
/usr/include/c++/13/bits/postypes.h:192:5: note: candidate: ‘template<class _StateT> bool std::operator==(const fpos<_StateT>&, const fpos<_StateT>&)’
  192 |     operator==(const fpos<_StateT>& __lhs, const fpos<_StateT>& __rhs)
      |     ^~~~~~~~
/usr/include/c++/13/bits/postypes.h:192:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::fpos<_StateT>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note: candidate: ‘template<class _T1, class _T2> bool std::operator==(const allocator<_CharT>&, const allocator<_T2>&)’
  237 |     operator==(const allocator<_T1>&, const allocator<_T2>&)
      |     ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:237:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::allocator<_CharT>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/string:48:
/usr/include/c++/13/bits/stl_iterator.h:448:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  448 |     operator==(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:448:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  493 |     operator==(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:493:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::reverse_iterator<_Iterator>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1678 |     operator==(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1678:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator==(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1748 |     operator==(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1748:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/string:51:
/usr/include/c++/13/bits/stl_pair.h:812:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator==(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  812 |     operator==(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:812:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::pair<_T1, _T2>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54:
/usr/include/c++/13/string_view:609:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  609 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:609:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘std::basic_string_view<_CharT, _Traits>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:616:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  616 |     operator==(basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:616:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘std::basic_string_view<_CharT, _Traits>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/string_view:642:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator==(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  642 |     operator==(__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:642:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   ‘std::unordered_map<std::__cxx11::basic_string<char>, int>’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3710 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3710:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3727 |     operator==(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3727:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator==(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3774 |     operator==(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3774:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const _CharT*’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/memory_resource.h:47,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/tuple:1919:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator==(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1919 |     operator==(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1919:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::tuple<_UTypes ...>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/bits/locale_facets.h:48,
                 from /usr/include/c++/13/bits/basic_ios.h:37,
                 from /usr/include/c++/13/ios:46:
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note: candidate: ‘template<class _CharT, class _Traits> bool std::operator==(const istreambuf_iterator<_CharT, _Traits>&, const istreambuf_iterator<_CharT, _Traits>&)’
  234 |     operator==(const istreambuf_iterator<_CharT, _Traits>& __a,
      |     ^~~~~~~~
/usr/include/c++/13/bits/streambuf_iterator.h:234:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::istreambuf_iterator<_CharT, _Traits>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/map:63,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:3:
/usr/include/c++/13/bits/stl_map.h:1513:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const map<_Key, _Tp, _Compare, _Allocator>&, const map<_Key, _Tp, _Compare, _Allocator>&)’
 1513 |     operator==(const map<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_map.h:1513:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::map<_Key, _Tp, _Compare, _Allocator>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/map:64:
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator==(const multimap<_Key, _Tp, _Compare, _Allocator>&, const multimap<_Key, _Tp, _Compare, _Allocator>&)’
 1134 |     operator==(const multimap<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_multimap.h:1134:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::multimap<_Key, _Tp, _Compare, _Allocator>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/unordered_map:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:6:
/usr/include/c++/13/bits/unordered_map.h:2143:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2143 |     operator==(const unordered_map<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2143:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::unordered_map<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note: candidate: ‘template<class _Key1, class _Tp1, class _Hash1, class _Pred1, class _Alloc1> bool std::operator==(const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&, const unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>&)’
 2157 |     operator==(const unordered_multimap<_Key, _Tp, _Hash, _Pred, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/unordered_map.h:2157:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::unordered_multimap<_Key1, _Tp1, _Hash1, _Pred1, _Alloc1>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:7:
/usr/include/c++/13/bits/stl_vector.h:2040:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator==(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2040 |     operator==(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2040:5: note:   template argument deduction/substitution failed:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:139:24: note:   mismatched types ‘const std::vector<_Tp, _Alloc>’ and ‘int’
  139 |         if (__g.key == __key) {
      |                        ^~~~~
/usr/include/c++/13/bits/allocator.h:216:7: note: candidate: ‘bool std::operator==(const allocator<pair<const __cxx11::basic_string<char>, int> >&, const allocator<pair<const __cxx11::basic_string<char>, int> >&)’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |       ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:18: note:   no known conversion for argument 1 from ‘int’ to ‘const std::allocator<std::pair<const std::__cxx11::basic_string<char>, int> >&’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |                  ^~~~~~~~~~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:7: note: candidate: ‘bool std::operator==(const allocator<char>&, const allocator<char>&)’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |       ^~~~~~~~
/usr/include/c++/13/bits/allocator.h:216:18: note:   no known conversion for argument 1 from ‘int’ to ‘const std::allocator<char>&’
  216 |       operator==(const allocator&, const allocator&) _GLIBCXX_NOTHROW
      |                  ^~~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:449:3: note: candidate: ‘bool std::operator==(const error_code&, const error_code&)’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:449:32: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_code&’
  449 |   operator==(const error_code& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:465:3: note: candidate: ‘bool std::operator==(const error_code&, const error_condition&)’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:465:32: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_code&’
  465 |   operator==(const error_code& __lhs, const error_condition& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:480:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_condition&)’
  480 |   operator==(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:480:37: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_condition&’
  480 |   operator==(const error_condition& __lhs,
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:517:3: note: candidate: ‘bool std::operator==(const error_condition&, const error_code&)’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:517:37: note:   no known conversion for argument 1 from ‘int’ to ‘const std::error_condition&’
  517 |   operator==(const error_condition& __lhs, const error_code& __rhs) noexcept
      |              ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:140:43: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  140 |           __g.items.push_back(ItemRevenue{ss});
      |                                           ^~
      |                                           |
      |                                           StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:147:67: error: cannot convert ‘StoreSale’ to ‘int’ in initialization
  147 |             __struct3{__key, std::vector<ItemRevenue>{ItemRevenue{ss}}});
      |                                                                   ^~
      |                                                                   |
      |                                                                   StoreSale
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:147:70: error: no matching function for call to ‘std::vector<ItemRevenue>::vector(<brace-enclosed initializer list>)’
  147 |             __struct3{__key, std::vector<ItemRevenue>{ItemRevenue{ss}}});
      |                                                                      ^
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = ItemRevenue; _Alloc = std::allocator<ItemRevenue>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = ItemRevenue; _Alloc = std::allocator<ItemRevenue>; allocator_type = std::allocator<ItemRevenue>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = ItemRevenue; _Alloc = std::allocator<ItemRevenue>; std::__type_identity_t<_Alloc> = std::allocator<ItemRevenue>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = ItemRevenue; _Alloc = std::allocator<ItemRevenue>; allocator_type = std::allocator<ItemRevenue>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = ItemRevenue; _Alloc = std::allocator<ItemRevenue>; allocator_type = std::allocator<ItemRevenue>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = ItemRevenue; _Alloc = std::allocator<ItemRevenue>; std::__type_identity_t<_Alloc> = std::allocator<ItemRevenue>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = ItemRevenue; _Alloc = std::allocator<ItemRevenue>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = ItemRevenue; _Alloc = std::allocator<ItemRevenue>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = ItemRevenue; _Alloc = std::allocator<ItemRevenue>; size_type = long unsigned int; value_type = ItemRevenue; allocator_type = std::allocator<ItemRevenue>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = ItemRevenue; _Alloc = std::allocator<ItemRevenue>; size_type = long unsigned int; allocator_type = std::allocator<ItemRevenue>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = ItemRevenue; _Alloc = std::allocator<ItemRevenue>; allocator_type = std::allocator<ItemRevenue>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = ItemRevenue; _Alloc = std::allocator<ItemRevenue>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:153:17: error: request for member ‘item’ in ‘g.__struct3::key’, which is of non-class type ‘int’
  153 |           g.key.item, ([&](auto v) {
      |                 ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:156:62: error: ‘struct ItemRevenue’ has no member named ‘price’
  156 |             std::vector<decltype(std::declval<ItemRevenue>().price)> __items;
      |                                                              ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:156:62: error: ‘struct ItemRevenue’ has no member named ‘price’
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:156:68: error: template argument 1 is invalid
  156 |             std::vector<decltype(std::declval<ItemRevenue>().price)> __items;
      |                                                                    ^
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:156:68: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:158:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  158 |               __items.push_back(x.price);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:158:35: error: ‘struct ItemRevenue’ has no member named ‘price’
  158 |               __items.push_back(x.price);
      |                                   ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:155:13:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:154:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  154 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:154:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  154 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:164:5: error: conversion from ‘vector<__struct4>’ to non-scalar type ‘vector<ItemRevenue>’ requested
  132 |   std::vector<ItemRevenue> item_revenue = ([&]() {
      |                                           ~~~~~~~~
  133 |     std::vector<__struct3> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  134 |     for (auto ss : store_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  135 |       auto __key = std::unordered_map<std::string, decltype(ss.item)>{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  136 |           {std::string("item"), ss.item}};
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  137 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  138 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  139 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  140 |           __g.items.push_back(ItemRevenue{ss});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  141 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  142 |           break;
      |           ~~~~~~
  143 |         }
      |         ~
  144 |       }
      |       ~
  145 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  146 |         __groups.push_back(
      |         ~~~~~~~~~~~~~~~~~~~
  147 |             __struct3{__key, std::vector<ItemRevenue>{ItemRevenue{ss}}});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  148 |       }
      |       ~
  149 |     }
      |     ~
  150 |     std::vector<__struct4> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  151 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  152 |       __items.push_back(__struct4{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  153 |           g.key.item, ([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~
  154 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  155 |           })(([&]() {
      |           ~~~~~~~~~~~
  156 |             std::vector<decltype(std::declval<ItemRevenue>().price)> __items;
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  157 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  158 |               __items.push_back(x.price);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  159 |             }
      |             ~
  160 |             return __items;
      |             ~~~~~~~~~~~~~~~
  161 |           })())});
      |           ~~~~~~~~
  162 |     }
      |     ~
  163 |     return __items;
      |     ~~~~~~~~~~~~~~~
  164 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:166:54: error: ‘struct ItemRevenue’ has no member named ‘revenue’
  166 |     std::vector<decltype(std::declval<ItemRevenue>().revenue)> __items;
      |                                                      ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:166:54: error: ‘struct ItemRevenue’ has no member named ‘revenue’
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:166:62: error: template argument 1 is invalid
  166 |     std::vector<decltype(std::declval<ItemRevenue>().revenue)> __items;
      |                                                              ^
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:166:62: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:168:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  168 |       __items.push_back(ir.revenue);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:168:28: error: ‘struct ItemRevenue’ has no member named ‘revenue’
  168 |       __items.push_back(ir.revenue);
      |                            ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:173:54: error: ‘struct ItemRevenue’ has no member named ‘revenue’
  173 |     std::vector<decltype(std::declval<ItemRevenue>().revenue)> __items;
      |                                                      ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:173:54: error: ‘struct ItemRevenue’ has no member named ‘revenue’
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:173:62: error: template argument 1 is invalid
  173 |     std::vector<decltype(std::declval<ItemRevenue>().revenue)> __items;
      |                                                              ^
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:173:62: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:175:17: error: ‘struct ItemRevenue’ has no member named ‘revenue’
  175 |       if (!((ir.revenue <= (0.1 * avg_rev))))
      |                 ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:177:15: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  177 |       __items.push_back(ir.revenue);
      |               ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:177:28: error: ‘struct ItemRevenue’ has no member named ‘revenue’
  177 |       __items.push_back(ir.revenue);
      |                            ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp: In instantiation of ‘main()::<lambda(auto:3)> [with auto:3 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:183:20:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:182:45: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  182 |                    return std::accumulate(v.begin(), v.end(), 0.0);
      |                                           ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:182:56: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  182 |                    return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                      ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp: In instantiation of ‘float average(auto:1) [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:165:25:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:121:11: error: request for member ‘size’ in ‘xs’, which is of non-class type ‘int’
  121 |   if ((xs.size() == 0)) {
      |        ~~~^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:125:3: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  125 |   for (auto x : xs) {
      |   ^~~
      |   std::begin
In file included from /usr/include/c++/13/string:53:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:125:3: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  125 |   for (auto x : xs) {
      |   ^~~
      |   std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq652690381697/001/prog.cpp:128:21: error: request for member ‘size’ in ‘xs’, which is of non-class type ‘int’
  128 |   return (sum / (xs.size()));
      |                  ~~~^~~~
